YUK-5602 - Yukon has run out of Perm Gen space
- Increased JVM  Perm Gen size to 80M.